--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,8 +38,8 @@
 
                 <ImageView
                     android:id="@+id/imageView"
-                    android:layout_width="120dp"
-                    android:layout_height="111dp"
+                    android:layout_width="150dp"
+                    android:layout_height="155dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginEnd="8dp"
@@ -48,26 +48,26 @@
                     app:layout_constraintEnd_toStartOf="@+id/button"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/button"
-                    app:srcCompat="@drawable/goat_icon" />
+                    app:srcCompat="@drawable/icon_goat_1" />
 
                 <ImageView
                     android:id="@+id/imageView2"
-                    android:layout_width="91dp"
-                    android:layout_height="233dp"
+                    android:layout_width="158dp"
+                    android:layout_height="294dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginRight="4dp"
                     app:layout_constraintBottom_toBottomOf="@+id/button3"
                     app:layout_constraintEnd_toStartOf="@+id/button3"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/button3"
-                    app:srcCompat="@drawable/icon_supr" />
+                    app:srcCompat="@drawable/icon_super_1" />
 
                 <ImageView
                     android:id="@+id/imageView3"
-                    android:layout_width="124dp"
-                    android:layout_height="118dp"
+                    android:layout_width="150dp"
+                    android:layout_height="155dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginEnd="8dp"
@@ -76,7 +76,7 @@
                     app:layout_constraintEnd_toStartOf="@+id/button2"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/button2"
-                    app:srcCompat="@drawable/icon_kawandi" />
+                    app:srcCompat="@drawable/icon_kawandi_1" />
 
                 <Button
                     android:id="@+id/button"
@@ -156,10 +156,10 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
 
+        android:background="@drawable/nav_bar1"
         android:visibility="visible"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/drawer_menu"
-        android:background="@drawable/nav_bar1"/>
+        app:menu="@menu/drawer_menu" />
 
     </android.support.v4.widget.DrawerLayout>
 
